--- a/WebAppService/Views/Shared/_ClientMenu.cshtml
+++ b/WebAppService/Views/Shared/_ClientMenu.cshtml
@@ -41,17 +41,17 @@
                 <nav>
                     <ul class="main-menu d-none d-lg-inline">
                         <li>
-                            <a href="#">
+                            <a href="/AboutUs/AboutUs">
                                 Về SunMedical
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/Blog/Blog">
                                 Chuyên Khoa
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/Service/ServiceList">
                                 Dịch Vụ Đặc Biệt
                             </a>
                         </li>
@@ -61,7 +61,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/Blog/Blog">
                                 Tin Tức
                             </a>
                         </li>
