--- a/WebAppService/wwwroot/web/assets/css/widgets.css
+++ b/WebAppService/wwwroot/web/assets/css/widgets.css
@@ -40,7 +40,15 @@ button.slick-arrow{background:none;border:0;position:relative;padding:0;margin:0
 
 /*widgets-post-carausel-1*/
 .editor-picked{padding:30px;}
-a.read-more{font-size:12px;border-radius:30px;border:1px solid #abd7ab;padding:5px 15px;color:#98ca98;font-weight:600;display:inline-block;}
+a.read-more {
+    font-size: 12px;
+    border-radius: 30px;
+    border: 1px solid #F26522;
+    padding: 5px 15px;
+    color: #F26522 !important;
+    font-weight: 600;
+    display: inline-block;
+}
 
 /*widgets-post-carausel-2*/
 .post-carausel-2 .img-hover-slide{min-height:310px;}
