--- a/WebAppService/Views/Shared/_Layout.cshtml
+++ b/WebAppService/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="~/web/assets/css/color.css">
     <link rel="stylesheet" href="~/web/assets/css/responsive.css">
     <link href="~/web/assets/css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -55,7 +57,7 @@
                 <div class="contact">
                     <span><i class="fas fa-map-marker-alt"></i> Ha Noi, Viet Nam</span>
                     <span><i class="fas fa-envelope"></i> <a href="mailto:support@carelink.com" class="text-white">support@carelink.com</a></span>
-                    <span><i class="fas fa-phone"></i> +62 864 644 2222</span>
+                    <span>  <i class="fas fa-phone"></i> +62 864 644 2222</span>
                     <div class="flags">
                         <img src="https://flagcdn.com/vn.svg" alt="Vietnam Flag">
                         <img src="https://flagcdn.com/jp.svg" alt="Japan Flag">
