--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -18,8 +18,8 @@
 <!-- Banner chính -->
 <div class="entry-header entry-header-2 mt-0 text-center" id="LayoutHome1">
     <div class="position-relative layout-home">
-        <div class="container p-0">
-            <div class="author-bio border-radius-10 p-30 mb-40 d-flex">
+        <div class="container d-flex flex-column p-0">
+            <div class="author-bio border-radius-10 p-30 mb-40  justify-content-center">
                 <div class="col-sm-7 author-info d-flex flex-column justify-content-center">
                     <h3>
                         <span class="vcard author">
@@ -35,9 +35,9 @@
                         <a href="#" class="main-menu d-none d-lg-inline btn-orrange">Xem thêm</a>
                     </div>
                 </div>
-                <div class="col-sm-5 mb-30">
+                <div class="col-sm-5 mb-30 car_img_circle">
                     <div class="author-img-circle">
-                        <a href="author.html"><img src="~/root/doctor1 1.png" alt="" class="avatar" /></a>
+                        <a href="author.html"><img src="/root/doctor1 1.png" alt="" class="avatar"></a>
                     </div>
                 </div>
             </div>
@@ -47,25 +47,33 @@
 
 <!-- Hộp nổi dịch vụ -->
 <div class="floating-box-wrapper">
-    <div class="floating-box container row">
-        <div class="box-item col-sm-4 d-flex">
-            <div class="col-sm-4">
-                <img src="/icon-call.png" class="icon" />
+    <div class="floating-box container col-12 row">
+        <div class="box-item col-sm-4 d-flex p-0">
+            <div class="icon_box col-sm-4 ml-0 p-0 ">
+                <i class="bi bi-telephone-fill"></i>
             </div>
-            <div class="col-sm-8">
+            <div class="col-sm-8 box_item_text p-0 pr-sm-3">
                 <h5>Gọi tổng đài</h5>
-                <p>Liên hệ.</p>
+                <p>Liên hệ với tổng đài hỗ trợ 24/7 để được tư vấn và đặt lịch khám nhanh chóng.</p>
             </div>
         </div>
-        <div class="box-item col-sm-4">
-            <img src="/icon-calendar.png" class="icon" />
-            <h5>Đặt lịch khám</h5>
-            <p>Đặt lịch khám.</p>
+        <div class="box-item col-sm-4 d-flex p-0">
+            <div class="icon_box col-sm-4 ml-0 p-0 ">
+                <i class="bi bi-calendar-week-fill"></i>
+            </div>
+            <div class="col-sm-8 box_item_text p-0 pr-sm-3">
+                <h5>Đặt lịnh khám</h5>
+                <p>Đặt lịch khám trực tuyến dễ dàng, giúp quý khách chủ động chọn thời gian.</p>
+            </div>
         </div>
-        <div class="box-item col-sm-4">
-            <img src="/icon-result.png" class="icon" />
-            <h5>Tra cứu kết quả</h5>
-            <p>Xem nhanh kết.</p>
+        <div class="box-item col-sm-4 d-flex p-0">
+            <div class="icon_box col-sm-4 ml-0 p-0 ">
+                <i class="bi bi-file-earmark-text-fill"></i>
+            </div>
+            <div class="col-sm-8 box_item_text p-0 pr-sm-3">
+                <h5>Tra cứu kết quả </h5>
+                <p>Xem nhanh kết quả khám bệnh trực tuyến, mọi lúc mọi nơi.</p>
+            </div>
         </div>
     </div>
 </div>
@@ -74,27 +82,38 @@
 <div class="entry-header entry-header-2 mb-0 text-center" id="LayoutHome2">
     <div class="position-relative layout-home-white">
         <div class="container p-0 mt-5">
-            <div class="author-bio border-radius-10 p-30 mb-40 d-flex">
-                <div class="col-sm-5 mb-30 text-center">
-                    <div style="width:453.98px;height:443.88px">
-                        <a href="author.html"><img src="~/root/group 4.png" alt="" class="avatar"></a>
+            <div class="author-bio border-radius-10 p-30 mt-100 mt-sm-60 mb-40 d-flex flex-column flex-md-row" id="author-bio_bt">
+                <div class="t_mb d-block d-sm-none text-left" >Về chúng tôi</div>
+                <div class="t_mb2 d-block d-sm-none text-left">Hành Trình Vì Sức Khỏe Cộng Đồng</div>
+                <div class="img_avt2 col-sm-5 mb-30 text-center d-flex">
+                    <div class="avatar2" style="width:453.98px;height:443.88px">
+                        <a href="author.html"><img src="~/root/group 4.png" alt="" ></a>
                     </div>
                 </div>
-                <div class="col-sm-7 author-info d-flex flex-column justify-content-center">
-                    <span class="no-arrow text-c-0">Sun Medical</span>
-                    <h3>
+                <div class="title_sv col-sm-7 author-info d-flex flex-column justify-content-center d-none d-sm-block">
+                    <span class="no-arrow text-c-0 d-none d-sm-block">Sun Medical</span>
+                    <h3 class="d-none d-sm-block">
                         <span class="vcard author">
                             <span class="fn">
                                 <a href="author.html" title="" rel="author" style="font-size:35px;font-family:Montserrat">Dịch vụ đặc biệt tại Sun Medical</a>
                             </span>
                         </span>
                     </h3>
-                    <div class="author-info-small-text">
-                        Tại Sun Medical, chúng tôi không ngừng mở rộng và nâng tầm dịch vụ nhằm đáp ứng nhu cầu chăm sóc sức khỏe toàn diện và chuyên sâu cho từng khách hàng...
+                    <div class="author-info-small-text d-none d-sm-block">
+                        Tại Sun Medical, chúng tôi không ngừng mở rộng và nâng tầm dịch vụ nhằm đáp ứng nhu cầu chăm sóc sức khỏe toàn diện và chuyên sâu cho từng khách hàng. Bên cạnh các dịch vụ khám chữa bệnh thông thường, Sun Medical đặc biệt chú trọng phát triển các lĩnh vực y tế cao cấp như nha khoa thẩm mỹ, da liễu thẩm mỹ và lưu trữ tế bào gốc – những dịch vụ tiên tiến kết hợp giữa công nghệ hiện đại và tiêu chuẩn quốc tế.
+                        Với đội ngũ chuyên gia giàu kinh nghiệm cùng hệ thống trang thiết bị tiên tiến, các dịch vụ đặc biệt tại Sun Medical không chỉ mang lại hiệu quả điều trị vượt trội mà còn đảm bảo tính cá nhân hóa cao, phù hợp với từng thể trạng và nhu cầu riêng biệt của khách hàng. Chúng tôi tự hào là điểm đến đáng tin cậy cho những ai đang tìm kiếm giải pháp chăm sóc sức khỏe kết hợp giữa y học hiện đại và yếu tố thẩm mỹ tinh tế.
                     </div>
-                    <div class="mt-10">
-                        <a href="#" class="main-menu d-none d-lg-inline btn-orrange">Xem thêm</a>
+
+                    <div class="author-info-small-text d-block d-sm-none">
+                        Từ những ngày đầu thành lập, chúng tôi đã xác định sứ mệnh cốt lõi là phục vụ và chăm sóc sức khỏe cộng đồng một cách toàn diện, tận tâm và bền vững. Không chỉ là nơi khám chữa bệnh, bệnh viện còn là điểm tựa tinh thần – nơi bệnh nhân và người nhà tìm thấy sự an tâm và hy vọng.
+                        Chúng tôi tự hào với đội ngũ y bác sĩ chuyên môn cao, giàu y đức cùng hệ thống trang thiết bị hiện đại, luôn sẵn sàng ứng dụng các phương pháp điều trị tiên tiến. Mỗi dịch vụ đều được thực hiện với tinh thần tận tụy và lấy người bệnh làm trung tâm.
                     </div>
+
+                    <div class="btn_sv mt-20">
+                        <a href="#" class="main-menu d-lg-inline btn-orrange">Xem thêm</a>
+                    </div>
+
+
                 </div>
             </div>
         </div>
@@ -114,8 +133,8 @@
                 </p>
             </div>
         </div>
-        <div class="row" id="">
-            <article class="col-lg-4 p-30">
+        <div class="row" id="sp_sv">
+            <article class="col-lg-4 col-6">
                 <div class="service-card bg-hover-green">
                     <div class="post-thumb d-flex mb-15 img-hover-scale justify-content-center">
                         <a href="single.html" class="service-img-wrapper">
@@ -132,7 +151,7 @@
                     </div>
                 </div>
             </article>
-            <article class="col-lg-4 p-30">
+            <article class="col-lg-4 col-6" >
                 <div class="service-card bg-hover-green">
                     <div class="post-thumb d-flex mb-15 img-hover-scale justify-content-center">
                         <a href="single.html" class="service-img-wrapper">
@@ -149,7 +168,7 @@
                     </div>
                 </div>
             </article>
-            <article class="col-lg-4 p-30">
+            <article class="col-lg-4 col-6">
                 <div class="service-card bg-hover-green">
                     <div class="post-thumb d-flex mb-15 img-hover-scale justify-content-center">
                         <a href="single.html" class="service-img-wrapper">
